<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marron_claro"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/cocinero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Bienvenido a CreativePantry!"
            android:textSize="20sp"
            android:fontFamily="@font/asar"
            android:textColor="@color/verde"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp" />

        <EditText
            android:id="@+id/nomUsuari"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Nombre de usuario..."
            android:background="@color/verde"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/asar"
            android:drawableStart="@drawable/user2"
            android:drawablePadding="8dp"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/correu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Correo electrónico..."
            android:inputType="textEmailAddress"
            android:background="@color/verde"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/asar"
            android:drawableStart="@drawable/user2"
            android:drawablePadding="8dp"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/contrasenya"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Contraseña..."
            android:inputType="textPassword"
            android:background="@color/verde"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/asar"
            android:drawableStart="@drawable/candado2"
            android:drawableEnd="@drawable/no_visible"
            android:drawablePadding="8dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/repetirContrasenya"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Repite la contraseña..."
            android:inputType="textPassword"
            android:background="@color/verde"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/asar"
            android:drawableStart="@drawable/candado2"
            android:drawableEnd="@drawable/no_visible"
            android:drawablePadding="8dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnregistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Regístrate"
            android:backgroundTint="@color/verde"
            android:textSize="20sp"
            android:fontFamily="@font/asar"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            android:textSize="16sp"
            android:fontFamily="@font/asar"
            android:layout_marginTop="12dp" />

    </LinearLayout>
</ScrollView>
